--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "npx tsc",
-    "start": "node ./dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon"
   },
   "dependencies": {
