--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,10 +6,9 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "./dist",
+    "outDir": "dist",
     "rootDir": "src",
     "resolveJsonModule": true
-    // Remove the "types" line
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
