--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
